--- a/Touch/Base.lproj/Main.storyboard
+++ b/Touch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="v30-dk-x0N">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -103,13 +103,10 @@
                         </connections>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="showGameSegue" animates="NO" id="Plp-vn-5Tn"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qhx-Pp-I4S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-423.75" y="98.239436619718305"/>
+            <point key="canvasLocation" x="169" y="95"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -1125,7 +1122,7 @@
                                     <color key="titleColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="showMenu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3tW-Fh-H3c"/>
+                                    <segue destination="v30-dk-x0N" kind="presentation" identifier="showMenuSegue" animates="NO" modalPresentationStyle="currentContext" id="nyo-b3-sRa"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1157,7 +1154,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="390" y="100"/>
+            <point key="canvasLocation" x="-724" y="96"/>
         </scene>
         <!--Alert View Controller-->
         <scene sceneID="Gid-ma-Wxr">
@@ -1253,7 +1250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tkd-mk-lDi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-426.08695652173918" y="807.88043478260875"/>
+            <point key="canvasLocation" x="-726" y="804"/>
         </scene>
     </scenes>
 </document>
