--- a/Touch/Base.lproj/Main.storyboard
+++ b/Touch/Base.lproj/Main.storyboard
@@ -103,9 +103,6 @@
                         </connections>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="showGameSegue" animates="NO" id="Plp-vn-5Tn"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qhx-Pp-I4S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -130,14 +127,14 @@
                                         <rect key="frame" x="5" y="5" width="278" height="80"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="32s-pU-LtS" userLabel="Label A">
-                                                <rect key="frame" x="0.0" y="0.0" width="136.5" height="80"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="137" height="80"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="80"/>
                                                 <color key="textColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3B-Ru-4wQ" userLabel="Label B">
-                                                <rect key="frame" x="141.5" y="0.0" width="136.5" height="80"/>
+                                                <rect key="frame" x="142" y="0.0" width="136" height="80"/>
                                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="80"/>
                                                 <color key="textColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -161,11 +158,11 @@
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="5"/>
                                         <subviews>
                                             <view tag="-2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4sa-PH-m8k" userLabel="Indicator A">
-                                                <rect key="frame" x="0.0" y="0.0" width="141.5" height="5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="142" height="5"/>
                                                 <color key="backgroundColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <view tag="-2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zXR-0O-lEb" userLabel="Indicator B">
-                                                <rect key="frame" x="146.5" y="0.0" width="141.5" height="5"/>
+                                                <rect key="frame" x="147" y="0.0" width="141" height="5"/>
                                                 <color key="backgroundColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                         </subviews>
@@ -1253,7 +1250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tkd-mk-lDi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-426.08695652173918" y="807.88043478260875"/>
+            <point key="canvasLocation" x="1206" y="99"/>
         </scene>
     </scenes>
 </document>
