Refactored discovery and invitation handling.

--- a/Touch/Base.lproj/Main.storyboard
+++ b/Touch/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qo6-bJ-imY">
-                                <rect key="frame" x="40" y="129" width="240" height="310"/>
+                                <rect key="frame" x="40" y="169" width="240" height="230"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YYw-pc-nlD" userLabel="New Game Button">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="70"/>
@@ -34,30 +34,15 @@
                                             <constraint firstAttribute="height" priority="750" constant="70" id="vfJ-fB-c3J"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                        <state key="normal" title="Start Local Game">
+                                        <state key="normal" title="New Game">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
                                             <action selector="newGame:" destination="v30-dk-x0N" eventType="touchUpInside" id="FMD-aO-FtR"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xGa-Ct-k8K" userLabel="New Network Game Button">
-                                        <rect key="frame" x="0.0" y="80" width="240" height="70"/>
-                                        <color key="backgroundColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" priority="750" constant="70" id="DKm-BY-11E"/>
-                                            <constraint firstAttribute="width" constant="240" id="i9q-qY-9QU"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                        <state key="normal" title="Start Network Game">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="newNetworkGame:" destination="v30-dk-x0N" eventType="touchUpInside" id="pc5-7X-zQ2"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hSu-vM-RTW" userLabel="Continue Game Button">
-                                        <rect key="frame" x="0.0" y="160" width="240" height="70"/>
+                                        <rect key="frame" x="0.0" y="80" width="240" height="70"/>
                                         <color key="backgroundColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="750" constant="70" id="cg9-Zm-F3t"/>
@@ -72,7 +57,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9la-gP-tch" userLabel="Resign Game Button">
-                                        <rect key="frame" x="0.0" y="240" width="240" height="70"/>
+                                        <rect key="frame" x="0.0" y="160" width="240" height="70"/>
                                         <color key="backgroundColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="240" id="1vJ-Uf-SLw"/>
@@ -97,7 +82,6 @@
                         <connections>
                             <outlet property="continueGameButton" destination="hSu-vM-RTW" id="F6u-xm-jO8"/>
                             <outlet property="newGameButton" destination="YYw-pc-nlD" id="ESm-9Z-JKH"/>
-                            <outlet property="newNetworkGameButton" destination="xGa-Ct-k8K" id="OEC-B7-7xX"/>
                             <outlet property="resignGameButton" destination="9la-gP-tch" id="D9I-yI-S2j"/>
                             <outlet property="stackView" destination="qo6-bJ-imY" id="zIa-aB-MnA"/>
                         </connections>
@@ -121,20 +105,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kQl-K3-BHs" userLabel="Score View">
-                                <rect key="frame" x="16" y="40" width="288" height="90"/>
+                                <rect key="frame" x="16" y="60" width="288" height="70"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="jkA-k1-oT1">
-                                        <rect key="frame" x="5" y="5" width="278" height="80"/>
+                                        <rect key="frame" x="5" y="5" width="278" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="32s-pU-LtS" userLabel="Label A">
-                                                <rect key="frame" x="0.0" y="0.0" width="137" height="80"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="137" height="60"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="80"/>
                                                 <color key="textColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3B-Ru-4wQ" userLabel="Label B">
-                                                <rect key="frame" x="142" y="0.0" width="136" height="80"/>
+                                                <rect key="frame" x="142" y="0.0" width="136" height="60"/>
                                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="80"/>
                                                 <color key="textColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
